Set the margin of image to avoid distortion and made simon game for phone

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,6 @@ video
 
 .play-button
 {
-  text-align: center;
   padding: 10px;
 }
 
